--- a/index.html
+++ b/index.html
@@ -8,13 +8,37 @@
 </head>
 <body>
     <nav>
+    <div class="nav-container">
+        <div class="logo-container">
+            <img src="images/Frame.png" alt="">
+            <p><span class="text-color">G</span>amer</p>
+
+        </div>
+        <div class="nav-items-container">
+            <a href="">About Us</a>
+            <a href="">Developers</a>
+            <a class="nav-btn">Follow Us On</a>
+
+        </div>
+    </div>
 
     </nav>
-    <main>
 
+    <main>
+<section class="banner-container">
+    <div class="banner-content">
+        <h2>Play Like The</h2>
+        <p>G.O.A.T.</p>
+
+    </div>
+    <div class="banner-img">
+        <img src="images/Group 18.png" alt="">
+    </div>
+
+</section>
     </main>
     <footer>
-        
+
     </footer>
 </body>
 </html>
