--- a/index.html
+++ b/index.html
@@ -1,44 +1,93 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="styles/game.css">
 </head>
+
 <body>
-    <nav>
-    <div class="nav-container">
-        <div class="logo-container">
-            <img src="images/Frame.png" alt="">
-            <p><span class="text-color">G</span>amer</p>
+    <header>
+        <nav>
+            <div class="nav-container">
+                <div class="logo-container">
+                    <img src="images/Frame.png" alt="">
+                    <p><span class="text-color">G</span>amer</p>
+
+                </div>
+                <div class="nav-items-container">
+                    <a href="">About Us</a>
+                    <a href="">Developers</a>
+                    <a class="nav-btn">Follow Us On</a>
+
+                </div>
+            </div>
+
+        </nav>
+
+
+        <div class="banner-container">
+            <div class="banner-content">
+                <h2>Play Like The</h2>
+                <p>G.O.A.T.</p>
+                <div class="banner-items"></div>
+
+            </div>
+            <div class="banner-img">
+                <img src="images/Group 18.png" alt="">
+            </div>
 
         </div>
-        <div class="nav-items-container">
-            <a href="">About Us</a>
-            <a href="">Developers</a>
-            <a class="nav-btn">Follow Us On</a>
-
-        </div>
-    </div>
-
-    </nav>
+    </header>
 
     <main>
-<section class="banner-container">
-    <div class="banner-content">
-        <h2>Play Like The</h2>
-        <p>G.O.A.T.</p>
+        <section class="gamer-container">
+            <div class="gamer-img">
+                <img src="images/pngwing 4.png" alt="">
+            </div>
+            <div class="gamer-content">
+                <h2>We are gamer</h2>
+                <p>An international digital games and entertainment company. We develop, publish and distribute
+                    multiplayer mobile games. We reach over 400 million players each month and our audience keeps
+                    growing.</p>
+                <button>know more</button>
+                <p>Our purpose...</p>
+                <h5>"unleash the gamer in everyone"</h5>
 
-    </div>
-    <div class="banner-img">
-        <img src="images/Group 18.png" alt="">
-    </div>
 
-</section>
+            </div>
+        </section>
+        <section class="funny-banner">
+            <h2 class="funny-content">Online Games Funny Videos</h2>
+            <p class="funny-text">A Collection of Hilarious Videos to Brighten Your Day</p>
+            <div class="funny-cards-container">
+            <div class="funny-cards">
+                <img src="images/Rectangle 4.png" alt="">
+                <p>No Download. No Installs. Play games Instantly on Gamer.</p>
+            </div>
+            <div class="funny-cards">
+                <img src="images/Rectangle 5.png" alt="">
+                <p>Did you score? #unblockedgames #school.</p>
+            </div>
+            <div class="funny-cards">
+                <img src="images/Rectangle 6.png" alt="">
+                <p>Breaking game records like OG</p>
+            </div>
+            <div class="funny-cards">
+                <img src="images/Rectangle 7.png" alt="">
+                <p>Busted gaming on school laptop, but you are still lit.</p>
+            </div>
+            </div>
+
+        </section>
+
+
     </main>
     <footer>
 
     </footer>
 </body>
+
 </html>
