footer and gaming section added

--- a/index.html
+++ b/index.html
@@ -63,29 +63,99 @@
             <h2 class="funny-content">Online Games Funny Videos</h2>
             <p class="funny-text">A Collection of Hilarious Videos to Brighten Your Day</p>
             <div class="funny-cards-container">
-            <div class="funny-cards">
-                <img src="images/Rectangle 4.png" alt="">
-                <p>No Download. No Installs. Play games Instantly on Gamer.</p>
+                <div class="funny-cards">
+                    <img src="images/Rectangle 4.png" alt="">
+                    <p>No Download. No Installs. Play games Instantly on Gamer.</p>
+                </div>
+                <div class="funny-cards">
+                    <img src="images/Rectangle 5.png" alt="">
+                    <p>Did you score? #unblockedgames #school.</p>
+                </div>
+                <div class="funny-cards">
+                    <img src="images/Rectangle 6.png" alt="">
+                    <p>Breaking game records like OG</p>
+                </div>
+                <div class="funny-cards">
+                    <img src="images/Rectangle 7.png" alt="">
+                    <p>Busted gaming on school laptop, but you are still lit.</p>
+                </div>
             </div>
-            <div class="funny-cards">
-                <img src="images/Rectangle 5.png" alt="">
-                <p>Did you score? #unblockedgames #school.</p>
-            </div>
-            <div class="funny-cards">
-                <img src="images/Rectangle 6.png" alt="">
-                <p>Breaking game records like OG</p>
-            </div>
-            <div class="funny-cards">
-                <img src="images/Rectangle 7.png" alt="">
-                <p>Busted gaming on school laptop, but you are still lit.</p>
-            </div>
-            </div>
+        </section>
+        <section class="play-banner-container">
+            <div class="play-banner">
+                <h3>Play Instantly,
+                    No Downloads
+                    No Installs.</h3>
+                <p class="texr-gray">Play games online for free without downloading. Just click the Play button and play instantly in your
+                    browser.</p>
 
+            </div>
+            <div class="play-banner-img">
+                <img src="images/Rectangle 55.png" alt="">
+                <img src="images/Rectangle 66.png" alt="">
+
+            </div>
+        </section>
+        <section class="gaming-section-container">
+            <div class="gaming-section">
+                <button class="btn-img"><img src="images/Rectangle 11.png" alt="">
+                Action Games</button>
+            </div>
+            <div class="gaming-section">
+                <button class="btn-img"><img src="images/Rectangle 12.png" alt="">
+                    Adventure Games</button>
+            </div>
+            <div class="gaming-section">
+                <button class="btn-img"><img src="images/Rectangle 13.png" alt="">
+                    Arcade Games</button>
+            </div>
+            <div class="gaming-section">
+                <button class="btn-img"><img src="images/Rectangle 14.png" alt="">
+                    Educational Games</button>
+            </div>
+            <div class="gaming-section">
+                <button class="btn-img"><img src="images/Rectangle 15.png" alt="">
+                    Word Games</button>
+            </div>
+            <div class="gaming-section">
+                <button class="btn-img"><img src="images/Rectangle 16.png" alt="">
+                    Role Palying Games</button>
+            </div>
+            <div class="gaming-section">
+                <button class="btn-img"><img src="images/Rectangle 17.png" alt="">
+                    Music & Audio Games</button>
+            </div>
+            <div class="gaming-section">
+                <button class="btn-img"><img src="images/Rectangle 18.png" alt="">
+                    Puzzle Games</button>
+            </div>
+            <div class="gaming-section">
+                <button class="btn-img"><img src="images/Rectangle 19.png" alt="">
+                    Strategy Games</button>
+            </div>
+            
+           
         </section>
 
 
     </main>
     <footer>
+        <div class="footer-section">
+            <img src="images/Frame.png" alt="">
+            <p>G<span>amer</span></p>
+            <ul>
+                <li>Our story</li>
+                <li>Games</li>
+                <li>Web Games</li>
+                <li> Careers</li>
+                <li>Supports</li>
+                <li>My Account</li>
+            </ul>
+            <div class="social-accounts">
+
+            </div>
+
+        </div>
 
     </footer>
 </body>
