--- a/index.html
+++ b/index.html
@@ -86,7 +86,8 @@
                 <h3>Play Instantly,
                     No Downloads
                     No Installs.</h3>
-                <p class="texr-gray">Play games online for free without downloading. Just click the Play button and play instantly in your
+                <p class="texr-gray">Play games online for free without downloading. Just click the Play button and play
+                    instantly in your
                     browser.</p>
 
             </div>
@@ -96,10 +97,40 @@
 
             </div>
         </section>
+        <section class="careers-banner">
+            <div class="careers-banner-text">
+                <h3>Careers</h3>
+                <p>Gamer is driven to create the best and most fun games for our millions of players all around the
+                    world, and we,re always on the lookout for more top talent to join our growing team. If you,d like
+                    to help us make great games and be a part of Gamers bright future, we,d love to hear from you.</p>
+                <div>
+                    Multimedia Artist +
+                    Data Engineer +
+                    Adroid Engineer +
+                    Server Developer +
+                    Group Financial Accountant +
+                    Senior User Acuisition Specialist +
+                </div>
+                <div>
+                    Lisbon, Portugal
+                    Lisbon, Portugal
+                    Zoetermeer, Netherlands
+                    Lisbon, Portugal
+                    London, United Kingdom
+                    Lisbon, Portugal
+                </div>
+                <button>SEE ALL POSITIONS</button>
+            </div>
+            <div class="careers-banner-img">
+                <img src="images/Group 65.png" alt="">
+            </div>
+
+
+        </section>
         <section class="gaming-section-container">
             <div class="gaming-section">
                 <button class="btn-img"><img src="images/Rectangle 11.png" alt="">
-                Action Games</button>
+                    Action Games</button>
             </div>
             <div class="gaming-section">
                 <button class="btn-img"><img src="images/Rectangle 12.png" alt="">
@@ -133,8 +164,8 @@
                 <button class="btn-img"><img src="images/Rectangle 19.png" alt="">
                     Strategy Games</button>
             </div>
-            
-           
+
+
         </section>
 
 
