--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="styles/game.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
+        integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 
 <body>
@@ -20,7 +23,7 @@
                 <div class="nav-items-container">
                     <a href="">About Us</a>
                     <a href="">Developers</a>
-                    <a class="nav-btn">Follow Us On</a>
+                    <a class="nav-btn">Follow Us On <i class="fa-brands fa-youtube"></i> <i class="fa-brands fa-tiktok"></i></a>
 
                 </div>
             </div>
@@ -32,6 +35,9 @@
             <div class="banner-content">
                 <h2>Play Like The</h2>
                 <p>G.O.A.T.</p>
+                <i class="fa-solid fa-play"></i>
+                <i class="fa-solid fa-arrow-down-to-line"></i>
+                <i class="fa-solid fa-user-group"></i>
                 <div class="banner-items"></div>
 
             </div>
@@ -183,6 +189,12 @@
                 <li>My Account</li>
             </ul>
             <div class="social-accounts">
+                <span><i class="fa-brands fa-twitter" style="color: white;"></i></span>
+               <span> <i class="fa-brands fa-facebook" style="color: blue;"></i></span>
+                <span><i class="fa-brands fa-square-youtube" style="color: red;"></i></span>
+                <span><i class="fa-brands fa-linkedin" style="color: skyblue;"></i></span>
+                <span><i class="fa-brands fa-instagram" style="color: orangered;"></i></span>
+                <span><i class="fa-brands fa-apple" style="color: white;"></i></span>
 
             </div>
 
