footer section modify

--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
                 <div class="nav-items-container">
                     <a href="">About Us</a>
                     <a href="">Developers</a>
-                    <a class="nav-btn">Follow Us On <i class="fa-brands fa-youtube"></i> <i class="fa-brands fa-tiktok"></i></a>
+                    <a class="nav-btn">Follow Us On <i class="fa-brands fa-youtube" style="color: red;"></i> 
+                        <i class="fa-brands fa-tiktok" style="color: aqua red black;"></i></a>
 
                 </div>
             </div>
@@ -33,11 +34,13 @@
 
         <div class="banner-container">
             <div class="banner-content">
-                <h2>Play Like The</h2>
-                <p>G.O.A.T.</p>
-                <i class="fa-solid fa-play"></i>
-                <i class="fa-solid fa-arrow-down-to-line"></i>
-                <i class="fa-solid fa-user-group"></i>
+                <h2 class="banner-text">Play Like The</h2>
+                <p class="banner-description">G.O.A.T.</p>
+                <i class="fa-solid fa-play"></i>1-Click instant play
+                <i class="fa-solid fa-download"></i>No Download
+                <i class="fa-solid fa-user-group"></i>1000s of supported online games
+                <button>Sign In</button> 
+                <button>Go Rogue</button>
                 <div class="banner-items"></div>
 
             </div>
@@ -54,9 +57,9 @@
                 <img src="images/pngwing 4.png" alt="">
             </div>
             <div class="gamer-content">
-                <h2>We are gamer</h2>
-                <p>An international digital games and entertainment company. We develop, publish and distribute
-                    multiplayer mobile games. We reach over 400 million players each month and our audience keeps
+                <h2 class="gamer-content-text">We are gamer</h2>
+                <p class="gamer-content-description">An international digital games and entertainment <br> company. We develop, publish and distribute
+                    multiplayer <br> mobile games. We reach over 400 million players each  <br>month and our audience keeps
                     growing.</p>
                 <button>know more</button>
                 <p>Our purpose...</p>
@@ -178,24 +181,37 @@
     </main>
     <footer>
         <div class="footer-section">
-            <img src="images/Frame.png" alt="">
-            <p>G<span>amer</span></p>
-            <ul>
-                <li>Our story</li>
-                <li>Games</li>
-                <li>Web Games</li>
-                <li> Careers</li>
-                <li>Supports</li>
-                <li>My Account</li>
-            </ul>
+            <div class="footer-logo">
+                <img src="images/Frame.png" alt="">
+                <p><span class="text-color">G</span>amer</p>
+            </div>
+            <div class="footer-content">
+                <ul>
+                    <li>Our story</li>
+                    <li>Games</li>
+                    <li>Web Games</li>
+                    <li> Careers</li>
+                    <li>Supports</li>
+                    <li>My Account</li>
+                </ul>
+            </div>
             <div class="social-accounts">
                 <span><i class="fa-brands fa-twitter" style="color: white;"></i></span>
-               <span> <i class="fa-brands fa-facebook" style="color: blue;"></i></span>
+                <span> <i class="fa-brands fa-facebook" style="color: blue;"></i></span>
                 <span><i class="fa-brands fa-square-youtube" style="color: red;"></i></span>
                 <span><i class="fa-brands fa-linkedin" style="color: skyblue;"></i></span>
                 <span><i class="fa-brands fa-instagram" style="color: orangered;"></i></span>
                 <span><i class="fa-brands fa-apple" style="color: white;"></i></span>
 
+            </div>
+            <div class="footer-small-section">
+                <small>
+                    <li>Terms and conditions</li>
+                    <li> Privacy Policy</li>
+                    <li>Cookie Police</li>
+                    <li>Privacy Settings</li>
+                    Play Games @ Gamer @ 2000-2023 Gamer Bangladesh
+                </small>
             </div>
 
         </div>
