added button and modify

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>My-gamer-zone-b8</title>
     <link rel="stylesheet" href="styles/game.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
         integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
@@ -36,11 +36,13 @@
             <div class="banner-content">
                 <h2 class="banner-text">Play Like The</h2>
                 <p class="banner-description">G.O.A.T.</p>
-                <i class="fa-solid fa-play"></i>1-Click instant play
-                <i class="fa-solid fa-download"></i>No Download
-                <i class="fa-solid fa-user-group"></i>1000s of supported online games
-                <button>Sign In</button> 
-                <button>Go Rogue</button>
+                <ul>
+                <i class="fa-solid fa-play" style="color: red;"></i><li>1-Click instant play</li><br>
+                <i class="fa-solid fa-download" style="color: magenta;"></i><li>No Download</li><br>
+                <i class="fa-solid fa-user-group" style="black"></i><li>1000s</li>
+                 of supported online games</ul><br>
+                <button class="btn-first">Sign In</button> 
+                <button class="btn-second">Go Rogue</button>
                 <div class="banner-items"></div>
 
             </div>
@@ -61,7 +63,7 @@
                 <p class="gamer-content-description">An international digital games and entertainment <br> company. We develop, publish and distribute
                     multiplayer <br> mobile games. We reach over 400 million players each  <br>month and our audience keeps
                     growing.</p>
-                <button>know more</button>
+                <button class="btn-third">know more</button>
                 <p>Our purpose...</p>
                 <h5>"unleash the gamer in everyone"</h5>
 
@@ -69,7 +71,8 @@
             </div>
         </section>
         <section class="funny-banner">
-            <h2 class="funny-content">Online Games Funny Videos</h2>
+            <h2 class="funny-content">Online Games <span class="funny"> Funny Videos</span>
+            </h2>
             <p class="funny-text">A Collection of Hilarious Videos to Brighten Your Day</p>
             <div class="funny-cards-container">
                 <div class="funny-cards">
@@ -92,10 +95,10 @@
         </section>
         <section class="play-banner-container">
             <div class="play-banner">
-                <h3>Play Instantly,
-                    No Downloads
+                <h3> <span class="play-text">Play Instantly, <br></span>
+                    No Downloads <br>
                     No Installs.</h3>
-                <p class="texr-gray">Play games online for free without downloading. Just click the Play button and play
+                <p class="texr-gray">Play games online for free without <br> downloading. Just click the Play button <br>and play
                     instantly in your
                     browser.</p>
 
@@ -108,11 +111,11 @@
         </section>
         <section class="careers-banner">
             <div class="careers-banner-text">
-                <h3>Careers</h3>
-                <p>Gamer is driven to create the best and most fun games for our millions of players all around the
+                <h3 class="text-careers">Careers</h3>
+                <p class="text-gray-light">Gamer is driven to create the best and most fun games for our millions of players all around the
                     world, and we,re always on the lookout for more top talent to join our growing team. If you,d like
                     to help us make great games and be a part of Gamers bright future, we,d love to hear from you.</p>
-                <div>
+                <div class="careers-1">
                     Multimedia Artist +
                     Data Engineer +
                     Adroid Engineer +
@@ -120,7 +123,7 @@
                     Group Financial Accountant +
                     Senior User Acuisition Specialist +
                 </div>
-                <div>
+                <div class="careers-2">
                     Lisbon, Portugal
                     Lisbon, Portugal
                     Zoetermeer, Netherlands
@@ -128,7 +131,7 @@
                     London, United Kingdom
                     Lisbon, Portugal
                 </div>
-                <button>SEE ALL POSITIONS</button>
+                <button class="btn-fifth">SEE ALL POSITIONS</button>
             </div>
             <div class="careers-banner-img">
                 <img src="images/Group 65.png" alt="">
