gaming section part complete

--- a/index.html
+++ b/index.html
@@ -54,7 +54,8 @@
     </header>
 
     <main>
-        <section class="gamer-container">
+        <section class="gamer">
+        <div class="gamer-container">
             <div class="gamer-img">
                 <img src="images/pngwing 4.png" alt="">
             </div>
@@ -64,12 +65,13 @@
                     multiplayer <br> mobile games. We reach over 400 million players each  <br>month and our audience keeps
                     growing.</p>
                 <button class="btn-third">know more</button>
-                <p>Our purpose...</p>
-                <h5>"unleash the gamer in everyone"</h5>
+                <p class="text-gray-1">Our purpose...</p>
+                <h5 class="text-gray-2">"unleash the gamer in everyone"</h5>
 
 
             </div>
         </section>
+        </div>
         <section class="funny-banner">
             <h2 class="funny-content">Online Games <span class="funny"> Funny Videos</span>
             </h2>
@@ -109,7 +111,8 @@
 
             </div>
         </section>
-        <section class="careers-banner">
+        <section class="careers">
+        <div class="careers-banner">
             <div class="careers-banner-text">
                 <h3 class="text-careers">Careers</h3>
                 <p class="text-gray-light">Gamer is driven to create the best and most fun games for our millions of players all around the
@@ -136,10 +139,12 @@
             <div class="careers-banner-img">
                 <img src="images/Group 65.png" alt="">
             </div>
-
+        </div>
 
         </section>
-        <section class="gaming-section-container">
+        <section class="game-part-2">
+        <div class="gaming-section-container">
+            <div class="gaming-section-1">
             <div class="gaming-section">
                 <button class="btn-img"><img src="images/Rectangle 11.png" alt="">
                     Action Games</button>
@@ -160,6 +165,8 @@
                 <button class="btn-img"><img src="images/Rectangle 15.png" alt="">
                     Word Games</button>
             </div>
+        </div>
+        <div class="gaming-section-2">
             <div class="gaming-section">
                 <button class="btn-img"><img src="images/Rectangle 16.png" alt="">
                     Role Palying Games</button>
@@ -175,11 +182,12 @@
             <div class="gaming-section">
                 <button class="btn-img"><img src="images/Rectangle 19.png" alt="">
                     Strategy Games</button>
+                </div>
             </div>
 
 
-        </section>
-
+        </div>
+    </section>
 
     </main>
     <footer>
