--- a/index.html
+++ b/index.html
@@ -43,13 +43,12 @@
                  of supported online games</ul><br>
                 <button class="btn-first">Sign In</button> 
                 <button class="btn-second">Go Rogue</button>
-                <div class="banner-items"></div>
-
             </div>
+            
             <div class="banner-img">
                 <img src="images/Group 18.png" alt="">
             </div>
-
+       
         </div>
     </header>
 
@@ -79,19 +78,19 @@
             <div class="funny-cards-container">
                 <div class="funny-cards">
                     <img src="images/Rectangle 4.png" alt="">
-                    <p>No Download. No Installs. Play games Instantly on Gamer.</p>
+                    <p>No Download. No Installs. Play <br> games Instantly on Gamer.</p>
                 </div>
                 <div class="funny-cards">
                     <img src="images/Rectangle 5.png" alt="">
-                    <p>Did you score? #unblockedgames #school.</p>
+                    <p>Did you score? #unblockedgames <br> #school.</p>
                 </div>
                 <div class="funny-cards">
                     <img src="images/Rectangle 6.png" alt="">
-                    <p>Breaking game records like OG</p>
+                    <p>Breaking game records  <br>like OG</p>
                 </div>
                 <div class="funny-cards">
                     <img src="images/Rectangle 7.png" alt="">
-                    <p>Busted gaming on school laptop, but you are still lit.</p>
+                    <p>Busted gaming on school laptop, <br> but you are still lit.</p>
                 </div>
             </div>
         </section>
@@ -107,8 +106,9 @@
             </div>
             <div class="play-banner-img">
                 <img src="images/Rectangle 55.png" alt="">
+                <div class="play-banner-img-1">
                 <img src="images/Rectangle 66.png" alt="">
-
+            </div>
             </div>
         </section>
         <section class="careers">
