adding footer responsive

--- a/index.html
+++ b/index.html
@@ -115,12 +115,15 @@
                 <img src="images/Rectangle 55.png" alt="">
                 <div class="play-banner-img-1">
                     <img src="images/Rectangle 66.png" alt="">
+                    <button class="watch">
+                        Watch now
+                    </button>
                 </div>
             </div>
         </section>
         <section class="careers">
             <div class="careers-banner">
-                <div class="careers-banner-text">
+                <div class="career-banner-para">
                     <h3 class="text-careers">Careers</h3>
                     <p class="text-gray-light">Gamer is driven to create the best and most fun games for our millions of
                         players all around the
@@ -128,22 +131,22 @@
                         like
                         to help us make great games and be a part of Gamers bright future, we,d love to hear from you.
                     </p>
-                    <div class="careers-1">
+                      <span>
                         Multimedia Artist +
                         Data Engineer +
                         Adroid Engineer +
                         Server Developer +
                         Group Financial Accountant +
                         Senior User Acuisition Specialist +
-                    </div>
-                    <div class="careers-2">
+                    </span>
+                    <span>
                         Lisbon, Portugal
                         Lisbon, Portugal
                         Zoetermeer, Netherlands
                         Lisbon, Portugal
                         London, United Kingdom
                         Lisbon, Portugal
-                    </div>
+                    </span>
                     <button class="btn-fifth">SEE ALL POSITIONS</button>
                 </div>
                 <div class="careers-banner-img">
@@ -206,23 +209,23 @@
                 <img src="images/Frame.png" alt="">
                 <p><span class="text-color">G</span>amer</p>
             </div>
-            <div class="footer-content">
+            <small><div class="footer-content">
                 <ul>
-                    <li>Our story</li>
+                     <li>Our story</li>
                     <li>Games</li>
                     <li>Web Games</li>
                     <li> Careers</li>
                     <li>Supports</li>
                     <li>My Account</li>
                 </ul>
-            </div>
+            </div></small>
             <div class="social-accounts">
-                <span><i class="fa-brands fa-twitter" style="color: white;"></i></span>
-                <span> <i class="fa-brands fa-facebook" style="color: blue;"></i></span>
-                <span><i class="fa-brands fa-square-youtube" style="color: red;"></i></span>
-                <span><i class="fa-brands fa-linkedin" style="color: skyblue;"></i></span>
-                <span><i class="fa-brands fa-instagram" style="color: orangered;"></i></span>
-                <span><i class="fa-brands fa-apple" style="color: white;"></i></span>
+                <a href=""><i class="fa-brands fa-twitter" style="color: white;"></i></a>
+                <a href=""><i class="fa-brands fa-facebook" style="color: blue;"></i></a>
+                <a href=""><i class="fa-brands fa-square-youtube" style="color: red;"></i></a>
+                <a href=""><i class="fa-brands fa-linkedin" style="color: skyblue;"></i></a>
+                <a href=""><i class="fa-brands fa-instagram" style="color: orangered;"></i></a>
+                <a href=""><i class="fa-brands fa-apple" style="color: white;"></i></a>
 
             </div>
             <div class="footer-small-section">
